frame/support/test/tests/pallet_ui/storage_003.stderr
error: Invalid pallet::storage, expect ident: `StorageValueType` or `StorageMapType` or `StorageDoubleMapType` in order to expand metadata, found `u8`
  --> $DIR/storage_003.rs:19:13
   |
19 |     type Foo = u8;
   |                ^^
